cmake_minimum_required(VERSION 3.23)
project(HW_15_11_Olender)

set(CMAKE_CXX_STANDARD 14)

add_executable(HW_15_11_Olender main.cpp CourseGrades.cpp CourseGrades.h PassFailExam.cpp PassFailExam.h PassFailActivity.cpp PassFailActivity.h GradedActivity.cpp GradedActivity.h FinalExam.cpp FinalExam.h Essay.cpp Essay.h)
